--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -461,21 +461,29 @@ Certain properties of the application can be controlled (e.g user prefs file loc
 === EditMode
 A `Restaurant` object contains many attributes. On top of a `Name`, `Location`, `Rating` and a list of `Tag`,
 it also includes a list of `Food` as its menu, as well as a list of `Order`. This makes it difficult to edit
-an entire `Restaurant` object using just one `Command`. The EditMode feature allows editing of a
-specific `Restaurant` object's details, menu and orders separately under 1 mode, using different commands.
+an entire `Restaurant` object using just one `Command`.
+
+The EditMode feature allows editing of a specific `Restaurant` object's details (name, location, rating, tags),
+menu and orders individually under 1 interface, using different commands.
 
 ==== Implementation
-* **Model**:
+**Model**:
 
 In addition to the `filteredRestaurantList` that contains all the restaurants in the restaurant database,
-`ModelManager` now contains a `editingRestaurantList`, which contains and allows access to the restaurant
-currently under EditMode. Upon calling of `editmode INDEX` command, the restaurant
-referenced by the `INDEX` in the list of restaurants will be placed in the `editingRestaurantList`.
-Subsequent commands that edit the restaurant, such as `addFoodCommand`, `addRatingCommand` and `editDetailsCommand`
-will create a new restaurant with the edited attributes and replace the restaurant in the `editingRestaurantList`
-with the new edited restaurant.
+`ModelManager` now contains a `editingRestaurantList`, which holds and allows access to the single restaurant
+currently under EditMode.
 
-* **Logic**:
+Upon calling of `editmode INDEX` command:
+
+* The restaurant referenced by the `INDEX` in the list of restaurants will be placed
+in the `editingRestaurantList` via the function call `Model#setEditingRestaurant(Restaurant editingRestaurant`.
+* Subsequent commands that edit the restaurant, such as `AddFoodCommand`, `DeleteFoodCommand`, `AddRatingCommand`
+and `EditDetailsCommand` will create a new restaurant with the edited attributes.
+* The outdated restaurant will be replaced with the new edited restaurant
+in both the `filteredRestaurantList` and `editingRestaurantList` via the function call
+`Model#setRestaurant(Restaurant oldRestaurant, Restaurant newRestaurant)`.
+
+**Logic**:
 
 The `Logic` for EditMode is facilitated by `Context` enum type, which contains the following constants:
 `GLOBAL`, `CUSTOMER`, `RESTAURANT`, `DELIVERYMEN` and `EDITING`. It determines the `Context` the application is in,
@@ -502,22 +510,22 @@ The following activity diagram summarises what happens when the user enters the 
 
 NOTE: Insert PNG for ParserActivityDiagram.puml
 
-* **UI**:
+**UI**:
 
 Commands that change the `Context`, and hence the UI, will pass the new `Context` to `MainWindow` in the Ui package
 via the `CommandResult` returned by the command.
 When `MainWindow` receives this new `Context`, it will do the changes to the Ui accordingly via the function call
 `MainWindow#changeDisplay(Context context)`.
 
-`editModeCommand` changes the `Context` to `Context.EDITING`. `MainWindow` will then display an extra `StackPane`
-showing the restaurant under EditMode, while the `StackPane` displaying the list of Restaurants
-originally will be filled with the restaurant's `Food` menu instead.
-Once `exitEditCommand` is called, `Editing` context is exited, the stackpane will be hidden,
+`EditModeCommand` changes the `Context` to `Context.EDITING`. `MainWindow` will then display an extra `StackPane`
+showing the restaurant under EditMode, while the `SplitPane` displaying the list of Restaurants
+originally will be filled with the restaurant's `Food` menu instead and `Order` list.
+Once `ExitEditCommand` is called, `Editing` context is exited, the stackpane will be hidden,
 and the list of restaurants will be shown again.
 
-The following sequence diagram summarises how the `editModeCommand` changes the Ui:
+The following sequence diagram summarises how the `EditModeCommand` changes the Ui:
 
-NOTE: Insert PNG for MainWindowSequenceDiagram.puml
+image::developerguide\MainWindowSequenceDiagram.png[]
 
 ==== Design Considerations
 
