--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -314,6 +314,32 @@ Deletes the first card of the deck `german`.
 
 // end::delete[]
 
+// tag::undo[]
+=== Undo the last alteration to a deck : `undo`
+
+This allows you to undo any changed you may have made to any deck. This includes the creation of a new deck, the addition/edit of any cards and the deletion of cards or decks.
+
+Format: `undo`
+
+Example:
+
+* `undo`
+
+// end::undo[]
+
+// tag::redo[]
+=== Redoes the last undo : `redo`
+
+This allows you to redo any undo that you had previously done. Please note that any alteration of a recovered deck from an Undo command will also reset the Redo history.
+
+Format: `redo`
+
+Example:
+
+* `redo`
+
+// end::redo[]
+
 === Start test with flashcards : `test`
 
 ****
@@ -433,31 +459,43 @@ Example:
 *Q*: How do I transfer my data to another computer? +
 *A*: Install the app in the other computer. Copy the JSON files of any decks you would like to transfer into the `data` folder of the app.
 
+*Q*: I accidentally deleted a deck! What can I do now? +
+*A*: You can just use the Undo command to recover the lost deck!
+
+*Q*: How many times can I use the Undo command sequentially? +
+*A*: The Undo command can be used to undo all deck alterations for this session. However, if you quit out of the app and reopen it, you will erase your history of Undos!
+
+*Q*: If I use Undo and make changes to an old version of a deck. Will redo recover my original deck before the Undo command? +
+*A*: Unfortunately, the original deck before the Undo is unrecoverable. As such, please be mindful of making any changes to a recovered deck as this will erase any version of decks before the Undo!
+
 // end::FAQ[]
 
 // tag::summary[]
 == Command Summary
 
 * *help* `help [command/COMMAND_NAME]` +
+e.g. `help`
 e.g. `help command/view`
 * *import* : `import filepath/FILE_NAME`
 * *export* : `export deck/DECK_NAME FILE_NAME`
 * *view* : `view [deck/DECK_NAME]` +
 e.g. `view deck/science_deck`
 * *create* : `create deck/DECK_NAME`
-* *add*: only applicable for Front-Back Cards and Multiple Choice Cards
+* *add* - only applicable for Front-Back Cards and Multiple Choice Cards
 ====
-** `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]`
-
-** `add deck/DECK_NAME front/CARD_FRONT back/CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
-
+FrontBack: `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]`
+MCQ: `add deck/DECK_NAME front/CARD_FRONT back/INDEX_OF_CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
 ====
-* *edit* : `edit deck/DECK_NAME action/DESIRED_ACTION [index/CARD_INDEX] [front/NEW_FRONT_TEXT] [back/NEW_BACK_TEXT]` +
+* *edit*: `edit deck/DECK_NAME action/DESIRED_ACTION [index/CARD_INDEX] [front/NEW_FRONT_TEXT] [back/NEW_BACK_TEXT]`
+- only applicable for Front-Back Cards and Multiple Choice Cards
 e.g. `edit deck/science_deck action/edit index/1 front/what is a cell back/a cell is a building block`
+* *undo* : `undo`
+* *redo* : `redo`
 * *test* : `test deck/DECK_NAME duration/TIME_LIMIT_ALLOWED` +
 e.g. `test deck/science_deck duration/0` +
 e.g. `test deck/science_deck duration/100`
 ====
+While in TEST_MODE:
 ** *next card*: `next`
 ** *previous card*: `prev`
 ** *exit test mode*: `exit`
